2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Pause instead of stop at last eos. This is for seeking.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Emit a Tick signal when a song's duration has changed at eos.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddWindowList.cs:
	* src/PlaylistWindow.cs:

	Support GDK_ACTION_LINK and _ASK.

2005-01-14  Mark McLauchlan  <mrm21@sussex.ac.uk>

	* DBusLib/Player.cs:

	WriteAlbumCoverToFile PlayingSong null check.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Restore more DB logic ..

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/AddWindow.glade:
	* data/glade/PlaylistWindow.glade:
	* src/Actions.cs:
	* src/PlaylistWindow.cs:

	Make Actions work properly, ie not lock up the app all the time.
	
	* src/About.cs:

	The About subclass didn't work, revert to previous
	ShowWindow stuff- see Ximian Bugzilla #71271

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Fix OnChanged logic.
	
	* src/AddWindow.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	SingalRequest, BooleanBox and DragDropPosition have to be classes,
	not structs!
	We change their properties while they are being passed around.

	Also, don't break out of the changes checking loop when one
	of the songs doesn't have a change ;)

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* data/muine.schemas.in:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/AddWindowEntry.cs:
	* src/AddWindowList.cs:

	Remove fake_length and min_query_length gconf crack.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/Database.cs:
	* src/Metadata.cs:
	* src/Song.cs:

	Remove pointless CleanStringArray on loading from db. Clean
	the arrays in Metadata itself instead.

	Various other small cleanups and fixes.
