@@ -1,5 +1,17 @@
 2005-01-14  Jorn Baayen  <jbaayen@gnome.org>
 
+	* PluginLib/IPlayer.cs:
+	* PluginLib/Plugin.cs:
+	* doc/en/Muine.PluginLib/IPlayer.xml:
+	* doc/en/Muine.PluginLib/TickEventHandler.xml:
+	* src/Player.cs:
+	* src/PlaylistWindow.cs:
+	* src/SkipToWindow.cs:
+
+	Add a TickEvent to IPlayer, and make SkipToWindow use it.
+
+2005-01-14  Jorn Baayen  <jbaayen@gnome.org>
+
 	* src/Player.cs:
 	* src/PlaylistWindow.cs:
 
